--- a/Yameru/Settings/PrefGeneralView.xib
+++ b/Yameru/Settings/PrefGeneralView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="16096" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16096"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -57,7 +57,7 @@
                                 <rect key="frame" x="120" y="278" width="139" height="25"/>
                                 <popUpButtonCell key="cell" type="push" title="Default" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="czF-UK-3wK" id="4Fx-cg-Gdh">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="menu"/>
+                                    <font key="font" metaFont="system"/>
                                     <menu key="menu" id="im4-Cm-EOB">
                                         <items>
                                             <menuItem title="Default" state="on" id="czF-UK-3wK">
@@ -135,8 +135,8 @@
                         <gridCell row="Pyg-zM-NIE" column="FVs-La-vbr" id="hpk-Sa-hym"/>
                         <gridCell row="Pyg-zM-NIE" column="bDu-0l-gcS" id="MKz-TD-UYf">
                             <button key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YJ5-wW-rvm">
-                                <rect key="frame" x="120" y="41" width="287" height="18"/>
-                                <buttonCell key="cell" type="check" title="Secure mode (requires administrator rights)" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="eLQ-xH-cWK">
+                                <rect key="frame" x="120" y="41" width="195" height="18"/>
+                                <buttonCell key="cell" type="check" title="Secure mode (Coming soon)" bezelStyle="regularSquare" imagePosition="left" enabled="NO" inset="2" id="eLQ-xH-cWK">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
